k8s/servicio-2.yml
# Servicio 2: Validador Antifraude (Event Driven, sin API HTTP)
# 2 replicas: RabbitMQ reparte los mensajes entre consumidores (competing consumers)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-2-validador
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicio-2-validador
  template:
    metadata:
      labels:
        app: servicio-2-validador
    spec:
      containers:
        - name: servicio-2
          image: DOCKERHUB_USER/validador-antifraude:latest
          imagePullPolicy: Always
