k8s/servicio-3.yml
# Servicio 3: Emision de Comprobantes (Event Driven, sin API HTTP)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-3-comprobantes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: servicio-3-comprobantes
  template:
    metadata:
      labels:
        app: servicio-3-comprobantes
    spec:
      containers:
        - name: servicio-3
          image: ghcr.io/crissspi/grupo-3-pasarela-de-pagos/servicio-3-comprobantes:latest
