k8s/gateway.yml
# API Gateway: unico punto de entrada del sistema
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      # Reparte las 2 replicas entre las 2 VMs (alta disponibilidad)
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: api-gateway
      containers:
        - name: api-gateway
          image: DOCKERHUB_USER/api-gateway-pagos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway   # el Ingress apunta aqui
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
